(fix) UI behind elements for Navbar

--- a/client/src/styles/app.css
+++ b/client/src/styles/app.css
@@ -1,3 +1,3 @@
-.navbar {
-    z-index: 1;
+.app-container {
+    z-index: -3;
 }
