--- a/client/src/styles/navBar.css
+++ b/client/src/styles/navBar.css
@@ -1,71 +1,76 @@
 h4 {
-    font-size: 2vw;
+  font-size: 2vw;
 }
 .navbar-container {
-    flex: 0.5;
-    display: flex;
-    color: white;
-    background-image: linear-gradient(180deg, white 80%, rgb(211, 211, 211));
-    max-height: 65px;
-    padding-bottom: 5px;
-    align-items: center;
-    overflow: hidden;
+  z-index: 1;
+  flex: 0.5;
+  display: flex;
+  color: white;
+  background-image: linear-gradient(180deg, white 80%, rgb(211, 211, 211));
+  max-height: 65px;
+  padding-bottom: 5px;
+  align-items: center;
+  overflow: hidden;
 }
 .transition {
-    width: 140px;
-    margin-right: 30px;
-    background-size: 100% 400%;
-    background-image: linear-gradient(to top, white 50%, #ff7751 50%);
-    -webkit-transition: background-position 1s;
-    -moz-transition: background-position 1s;
-    transition: background-position 1s;
+  width: 140px;
+  /* margin-right: 30px; */
+  background-size: 100% 400%;
+  background-image: linear-gradient(to top, white 50%, #ff7751 50%);
+  -webkit-transition: background-position 1s;
+  -moz-transition: background-position 1s;
+  transition: background-position 1s;
 }
 .profile-thumb {
-    width: 80px;
-    opacity: 100;
-    margin-left: 30px;
+  width: 80px;
+  opacity: 100;
+  margin-left: 30px;
 }
 .profile-card {
-    background-color: white;
-    position: absolute;
-    right: 0;
+  background-color: white;
+  opacity: 100;
+  position: absolute;
+  right: 2vw;
+  z-index: 1;
 }
 .profile-card-elements {
-    display: flex;
-    flex-direction: column;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 .transition:hover {
-    background-position: 0 -100%;
-    color: white;
+  background-position: 0 -100%;
+  color: white;
 }
 .redirect-text {
-    font-size: medium;
-    font-weight: normal;
-    text-align: center;
-    padding: 4px;
-    color: white;
+  font-size: medium;
+  font-weight: normal;
+  text-align: center;
+  padding: 4px;
+  color: white;
 }
 .btn {
-    display: flex;
-    justify-content: flex-start;
-    color: white;
-    max-height: 60px;
-    align-items: center;
-    margin-left: 20px;
+  display: flex;
+  justify-content: flex-start;
+  color: white;
+  max-height: 60px;
+  align-items: center;
+  margin-left: 20px;
 }
 .logo {
-    display: flex;
-    justify-content: flex-start;
-    max-height: 10px;
-    max-width: 100px;
+  display: flex;
+  justify-content: flex-start;
+  max-height: 10px;
+  max-width: 100px;
 }
 .thumbnail {
-    margin-left: 20px;
-    width: 50px;
-    height: 50px;
-    position: absolute;
-    display: flex;
-    justify-content: flex-end;
+  margin-left: 20px;
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  display: flex;
+  justify-content: flex-end;
 }
 
 /*
